update generated file and fix format